# silly_logic2

./: auto_saleae.py  config.json  default.nix  logic.sh  logic_vnc.sh  mask_out_usb_devices.sh  pkg_exposevnc.nix  pkg_jwmrun.nix  pkg_saleaelogic2.nix  pyproject.toml  readme.md  saleae_example.py  shell.nix  shell_saleaelogic2.nix
.github/workflows/: ci.yml
test/can_find_root/: test.sh
test/environment_sanity/: auto_saleae.py  test.sh
test/virtual_capture/: test.sh
test/virtual_capture_x11vnc/: test.sh
test/virtual_capture_x11vnc_jwm/: test.sh
